--- a/src/app/rsvp/rsvp.component.css
+++ b/src/app/rsvp/rsvp.component.css
@@ -12,13 +12,12 @@
   }
 }
 .confirmar-asistencia-form {
-  color: white;
+  color: #f9eddc;
 }
 
 .rsvp-form {
   display: flex;
   flex-direction: column;
-  /* background-color: rgba(5, 10, 48); */
   min-width: 70%;
 }
 .row {
@@ -32,10 +31,6 @@
 }
 .icon-col {
   width: 100px;
-}
-.icon {
-  filter: saturate(500%) contrast(800%) brightness(500%) invert(80%) sepia(50%)
-    hue-rotate(120deg);
 }
 .form-col {
   width: 100%;
@@ -67,16 +62,16 @@
   flex-direction: column;
 }
 .divider {
-  border-top-color: rgba(255, 255, 255, 0.5);
+  border-top-color: #f9eddc;
 }
 
 :host ::ng-deep label {
-  color: white;
+  color: #f9eddc;
 }
 
 :host ::ng-deep .mdc-radio__background .mdc-radio__outer-circle {
-  border-color: white !important; /*change radio button not checked border */
+  border-color: #f9eddc !important; /*change radio button not checked border */
 }
 :host ::ng-deep .mdc-checkbox__background {
-  border-color: white !important;
+  border-color: #f9eddc !important;
 }
