--- a/src/app/ceremonia/ceremonia.component.css
+++ b/src/app/ceremonia/ceremonia.component.css
@@ -89,7 +89,7 @@
 }
 
 .section-header {
-  color: white;
+  color: #f9eddc;
   font-family: CinzelDecorative;
   letter-spacing: 7px;
   line-height: 1.7;
@@ -119,7 +119,7 @@
   gap: 10px;
   border-radius: 10px;
   width: 100%;
-  color: white;
+  color: #f9eddc;
   font-family: DellaRespira;
 }
 .ceremonia-icon {
@@ -142,7 +142,7 @@
   gap: 10px;
   border-radius: 10px;
   width: 100%;
-  color: white;
+  color: #f9eddc;
   font-family: DellaRespira;
   padding: 0 0 30px 0;
 }
