--- a/src/app/countdown/countdown.component.css
+++ b/src/app/countdown/countdown.component.css
@@ -1,8 +1,8 @@
 /* For extremely small screen devices (595px and below) */
 @media only screen and (max-width: 290) {
   .time-unit {
-    width: calc(30% / 4);
-    height: 80px;
+    width: calc(85% / 4) !important;
+    height: 80px !important;
   }
   .time-label {
     font-size: x-small !important;
@@ -11,11 +11,12 @@
 /* For extremely small screen devices (595px and below) */
 @media only screen and (max-width: 595px) {
   .time-unit {
-    width: calc(30% / 4);
+    width: calc(85% / 4);
     height: 80px;
+    border-radius: 10px !important;
   }
   .time-label {
-    font-size: x-small !important;
+    font-size: 5px !important;
   }
 }
 @media only screen and (min-width: 700px) {
