--- a/src/styles.css
+++ b/src/styles.css
@@ -23,10 +23,6 @@ body {
   scroll-behavior: smooth;
 }
 
-@font-face {
-  font-family: "DancingScript";
-  src: url("assets/fonts/DancingScript/DancingScript-Bold.ttf");
-}
 
 @font-face {
   font-family: "Poppins-Medium";
@@ -62,12 +58,12 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #f9eddc;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #b68c54;
 }
 
 /* Handle on hover */
