--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,73 +4,73 @@
 /* ======== Angular material custom themes ======== */
 
 $my-primary-pallete: (
-  50: #e8eaf6,
-  100: #c5cbe9,
-  200: #9fa8da,
-  300: #7985cb,
-  400: #5c6bc0,
-  500: #3f51b5,
-  600: #394aae,
-  700: #3140a5,
-  800: #29379d,
-  900: #1b278d,
-  A100: #c6cbff,
-  A200: #939dff,
-  A400: #606eff,
-  A700: #4757ff,
+  50: #e1e3e6,
+  100: #b5bac0,
+  200: #838c97,
+  300: #515e6d,
+  400: #2c3c4d,
+  500: #07192e, // main
+  600: #061629,
+  700: #051223,
+  800: #040e1d,
+  900: #020812,
+  A100: #537eff,
+  A200: #2058ff,
+  A400: #003bec,
+  A700: #0035d3,
   contrast: (
     50: #000000,
     100: #000000,
     200: #000000,
-    300: #000000,
-    400: #ffffff,
-    500: #ffffff,
-    600: #ffffff,
-    700: #ffffff,
-    800: #ffffff,
-    900: #ffffff,
-    A100: #000000,
-    A200: #000000,
-    A400: #ffffff,
-    A700: #ffffff,
+    300: #f9eddc,
+    400: #f9eddc,
+    500: #f9eddc,
+    600: #f9eddc,
+    700: #f9eddc,
+    800: #f9eddc,
+    900: #f9eddc,
+    A100: #f9eddc,
+    A200: #f9eddc,
+    A400: #f9eddc,
+    A700: #f9eddc,
   ),
 );
 
 $my-accent-pallete: (
-  50: #f6f4e8,
-  100: #e9e4c6,
-  200: #dad3a1,
-  300: #cbc17b,
-  400: #c0b35e,
-  500: #b5a642,
-  600: #ae9e3c,
-  700: #a59533,
-  800: #9d8b2b,
-  900: #8d7b1d,
-  A100: #fff5c8,
-  A200: #ffec95,
-  A400: #ffe362,
-  A700: #ffde48,
+  50: #f6f1ea,
+  100: #e9ddcc,
+  200: #dbc6aa,
+  300: #ccaf87,
+  400: #c19d6e,
+  500: #b68c54, // main
+  600: #af844d,
+  700: #a67943,
+  800: #9e6f3a,
+  900: #8e5c29,
+  A100: #ffe7d1,
+  A200: #ffcd9e,
+  A400: #ffb26b,
+  A700: #ffa552,
   contrast: (
-    50: #000000,
-    100: #000000,
-    200: #000000,
-    300: #000000,
-    400: #000000,
-    500: #000000,
-    600: #000000,
-    700: #000000,
-    800: #000000,
+    50: #07192e,
+    100: #07192e,
+    200: #07192e,
+    300: #07192e,
+    400: #07192e,
+    500: #07192e,
+    600: #07192e,
+    700: #07192e,
+    800: #ffffff,
     900: #ffffff,
-    A100: #000000,
-    A200: #000000,
-    A400: #000000,
-    A700: #000000,
+    A100: #07192e,
+    A200: #07192e,
+    A400: #07192e,
+    A700: #07192e,
   ),
 );
 
 $my-primary: mat.define-palette($my-primary-pallete, 500);
-$my-accent: mat.define-palette($my-accent-pallete, A200, A100, A400);
+$my-accent: mat.define-palette($my-accent-pallete, 500 , A200, A100, A400);
 
 // The "warn" palette is optional and defaults to red if not specified.
 $my-warn: mat.define-palette(mat.$red-palette);
