--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
 }
 
+@media only screen and (max-width: 600px) {
+  body {
+    background-size: 300% !important;
+  }
+}
+
 body {
   position: relative;
   height: 100%;
