--- a/src/app/ceremonia/ceremonia.component.html
+++ b/src/app/ceremonia/ceremonia.component.html
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="ceremonia-content">
       <div class="row">
-        <app-timeline class="column"></app-timeline>
+        <app-timeline class="column" [invitado]="invitado"></app-timeline>
       </div>
     </div>
   </div>
@@ -42,13 +42,13 @@
         <div class="column nota-importante">
           <h3>SÓLO ADULTOS</h3>
           <img class="linea" src="../../assets/images/linea.png" />
-          <p>
+          <!-- <p>
             {{
               "Adoramos a sus hijos, pero creemos que necesitan una noche libre."
                 | uppercase
             }}
-          </p>
-          <p>{{ "Sólo adultos, por favor." | uppercase }}</p>
+          </p> -->
+          <!-- <p>{{ "Sólo adultos, por favor." | uppercase }}</p> -->
         </div>
       </div>
     </div>
@@ -77,13 +77,13 @@
         <div class="column nota-importante">
           <h3>SÓLO ADULTOS</h3>
           <img class="linea" src="../../assets/images/linea.png" />
-          <p>
+          <!-- <p>
             {{
               "Adoramos a sus hijos, pero creemos que necesitan una noche libre."
                 | uppercase
             }}
-          </p>
-          <p>{{ "Sólo adultos, por favor." | uppercase }}</p>
+          </p> -->
+          <!-- <p>{{ "Sólo adultos, por favor." | uppercase }}</p> -->
         </div>
       </div>
     </div>
