--- a/src/app/hotel-card/hotel-card.component.html
+++ b/src/app/hotel-card/hotel-card.component.html
@@ -30,7 +30,7 @@
               <p>Tarifa especial con el Código:</p>
               <p>{{ hotel.descuento }}</p>
             </div>
-
+            <p class="telefono">{{ hotel.descripcion }}</p>
             <p class="telefono">{{ hotel.telefono }}</p>
             <p class="direccion">{{ hotel.direccion }}</p>
             <button
