--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,8 @@
+@media all and (-webkit-min-device-pixel-ratio:0) and (min-resolution: .001dpcm) {
+  .parallax {
+    background-attachment: scroll !important;
+  }
+}
 /* For extremely small screen devices (595px and below) */
 @media only screen and (max-width: 290) {
   .item {
