--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -9,7 +9,7 @@
     >
       <defs>
         <linearGradient id="left-to-right">
-          <stop offset="0" stop-color="#F9EDDC">
+          <stop offset="0" stop-color="#b68c54">
             <animate
               dur="1s"
               attributeName="offset"
@@ -18,7 +18,7 @@
               to="1"
             />
           </stop>
-          <stop offset="0" stop-color="#050a30">
+          <stop offset="0" stop-color="#b68c54">
             <animate
               dur="2s"
               attributeName="offset"
@@ -29,7 +29,7 @@
           </stop>
         </linearGradient>
         <linearGradient id="right-to-left">
-          <stop offset="0" stop-color="#F9EDDC">
+          <stop offset="0" stop-color="#b68c54">
             <animate
               dur="1s"
               attributeName="offset"
@@ -38,7 +38,7 @@
               to="0"
             />
           </stop>
-          <stop offset="0" stop-color="#F9EDDC">
+          <stop offset="0" stop-color="#b68c54">
             <animate
               dur="2s"
               attributeName="offset"
