--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,6 +3,21 @@
     background-attachment: scroll !important;
   }
 }
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2)      and (min-width: 320px),
+only screen and (   min--moz-device-pixel-ratio: 2)      and (min-width: 320px),
+only screen and (     -o-min-device-pixel-ratio: 2/1)    and (min-width: 320px),
+only screen and (        min-device-pixel-ratio: 2)      and (min-width: 320px),
+only screen and (                min-resolution: 192dpi) and (min-width: 320px),
+only screen and (                min-resolution: 2dppx)  and (min-width: 320px) {
+
+  /* Small screen, retina, stuff to override above media query */
+  .parallax2 {
+    background-position: -300px 50px !important;
+  }
+}
+
 /* For extremely small screen devices (595px and below) */
 @media only screen and (max-width: 290) {
   .item {
